--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <h1>My first project</h1>
     <p>My first project built in an IDE!</p>
+    <p class="text-center">Using the VS Code Source Control Panel makes committing my code even faster!</p>
     <h2>VS Code is awesome !</h2>
     <img src="assets/images/ci-logo.png" alt="Code Institute Logo" />
   </body>
